--- a/src/app/Forms/User/signup-form/signup-form.component.html
+++ b/src/app/Forms/User/signup-form/signup-form.component.html
@@ -43,7 +43,7 @@
             <input type="submit" value="Create
             Account" class="btn btn-block " [disabled]="!userregistrationForm.valid">
 
-           <label> <a routerLink="" class="color"> Signup as Admin  </a></label>
+           <label> <a routerLink="" class="color"> Already have an account than Login!  </a></label>
 
         </form>
     </div>
