--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,17 +2,17 @@
     <nav class="navbar navbar-expand-md navbar-dark  my ">
 
         <div>
-            <a href="" class="navbar-brand">Floor Decor</a>
+            <a routerLink="" class="navbar-brand">Floor Decor</a>
         </div>
 
         <ul class="navbar-nav ">
-            <li><a href="" class="nav-link">Home</a></li>
-            <li><a href="" class="nav-link">About us</a></li>
-            <li><a href="" class="nav-link">Contact Us</a></li>
+            <li><a routerLink="/home" class="nav-link">Home</a></li>
+            <li><a routerLink="" class="nav-link">About us</a></li>
+            <li><a routerLink="" class="nav-link">Contact Us</a></li>
         </ul>
         <ul class="navbar-nav navbar-collapse justify-content-end">
-            <li><a href="" class="nav-link">Login</a></li>
-            <li><a href="" class="nav-link">Logout</a></li>
+            <li><a routerLink="/login" class="nav-link">Login</a></li>
+            <li><a routerLink="/logout" class="nav-link">Logout</a></li>
         </ul>
     </nav>
     <!-- <nav class="navbar navbar-default">
