--- a/src/app/Forms/User/login-form/login-form.component.html
+++ b/src/app/Forms/User/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<link rel="icon" type="image/png" href="../../../../assets/favicon.ico" />
+<!-- <link rel="icon" type="image/png" href="../../../../assets/favicon.ico" />
 
 <div style="background-color: #666666;">
 
@@ -10,29 +10,29 @@
                         <label>
                             Login to continue
                         </label>
-                    </span>
+                    </span> -->
 
-                    <!-- validate-form -->
+<!-- validate-form -->
 
 
-                    <div class="wrap-input100 validate-input">
-                        <!-- <label class="col-md-4 ">Email:</label> -->
-                        <input class="input100 form-control" type="text" formControlName="usernames" placeholder="username" autocomplete="username"
+<!-- <div class="wrap-input100 validate-input"> -->
+<!-- <label class="col-md-4 ">Email:</label> -->
+<!-- <input class="input100 form-control" type="text" formControlName="usernames" placeholder="username" autocomplete="username"
                             [(ngModel)]="username" required>
                         <span class="focus-input100"></span>
                         <div *ngIf="submitted && f.usernames?.errors" class="invalid-feedback">
                             <div *ngIf="f.usernames?.errors?.required">username is required</div>
-                        </div>
-                        <!-- <span class="label-input100">Email</span> -->
-                    </div>
+                        </div> -->
+<!-- <span class="label-input100">Email</span> -->
+<!-- </div>
 
 
                     <div class="wrap-input100 validate-input">
                         <input class="input100 form-control" type="password" formControlName="passwords" placeholder="Password"
                             [(ngModel)]="password" required>
-                        <span class="focus-input100"></span>
-                        <!-- <span class="label-input100">Password</span> -->
-                    </div>
+                        <span class="focus-input100"></span> -->
+<!-- <span class="label-input100">Password</span> -->
+<!-- </div>
 
                     <div class="flex-sb-m w-full p-t-3 p-b-32 my  ">
                         <div class="contact100-form-checkbox">
@@ -47,10 +47,10 @@
                                 Forgot Password?
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
 
-                    <div class="container-login100-form-btn">
+<!-- <div class="container-login100-form-btn">
                         <button class="login100-form-btn" >
                             Login
                         </button>
@@ -80,4 +80,75 @@
             </div>
         </div>
     </div>
+</div> -->
+
+
+<link
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    rel="stylesheet" id="bootstrap-css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet"
+    id="bootstrap-css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
+<div class="main">
+
+
+    <!-- Sing in  Form -->
+    <section class="sign-in">
+        <div class="container">
+            <div class="signin-content">
+                <div class="signin-image">
+                    <figure><img src="../../../../assets/bg-01.jpg" alt="sing up image"></figure>
+                    <a routerLink="/signup" class="signup-image-link">Create an account</a>
+                </div>
+                <form class="login100-form needs-validation form " name="form" [formGroup]="userloginForm"
+                    (ngSubmit)="authenticateData()" #f="ngForm">
+                    <!-- Aform -->
+                    <div class="signin-form">
+                        <h2 class="form-title">Sign In</h2>
+                        <div class="form-group">
+                            <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            <input type="text" name="your_name" id="your_name" placeholder="Your Name"
+                                formControlName="usernames" [(ngModel)]="form.username" />
+                            <div class="alert-danger">
+                                <div
+                                    *ngIf=" userloginForm.get('usernames').invalid && userloginForm.get('usernames').touched">
+                                    username is required </div>
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
+                            <input type="password" name="your_pass" id="your_pass" placeholder="Password"
+                                formControlName="passwords" [(ngModel)]="form.password" />
+                            <div class="alert-danger">
+                                <div
+                                    *ngIf=" userloginForm.get('passwords').invalid && userloginForm.get('passwords').touched">
+                                    password is required </div>
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
+                            <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember
+                                me</label>
+                        </div>
+                        <div class="form-group form-button">
+                            <input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
+                            <div class="alert alert-danger" *ngIf="!userloginForm.valid && userloginForm.touched">
+                                Enterd data is
+                                invalid</div>
+                        </div>
+
+                    </div>
+                    <div class="alert alert-warning" *ngIf="f.submitted && isLoginFailed">
+                        Signup failed!<br />{{ errorMessage }}
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
 </div>
