--- a/src/app/Forms/User/signup-form/signup-form.component.html
+++ b/src/app/Forms/User/signup-form/signup-form.component.html
@@ -1,4 +1,4 @@
-<div class="container ">
+<!-- <div class="container ">
     <div class="col-md-6 box">
         <form [formGroup]='userregistrationForm' class="needs-validation form "
             (ngSubmit)="PostData(userregistrationForm)">
@@ -8,13 +8,13 @@
             </label>
 
             <div>
-                <label class="col-md-4">Username:</label>
-                <input type="text" class="form-control" formControlName="username" placeholder="Username"
-                    autocomplete="username" required>
-                <!-- <div *ngIf="submitted && f.username?.errors" class="invalid-feedback">
+                <label class="col-md-4">username:</label>
+                <input type="text" class="form-control" formControlName="username" placeholder="username"
+                    autocomplete="username" required> -->
+<!-- <div *ngIf="submitted && f.username?.errors" class="invalid-feedback">
             <div *ngIf="f.username?.errors?.required">username is required</div>
         </div> -->
-            </div>
+<!-- </div>
             <div>
                 <label class="col-md-4">Email:</label>
 
@@ -26,8 +26,8 @@
 
                 <input type="password" class="form-control" formControlName="password" placeholder="password"
                     autocomplete="password" required>
-            </div>
-            <!-- <div>
+            </div> -->
+<!-- <div>
                 <label class="col-md-6">Gender:</label>
                 <div class="col-md-6 radio-align">
                     <div class="custom-control custom-radio">
@@ -40,20 +40,115 @@
                     </div>
                 </div>
             </div> -->
-            <input type="submit" value="Create
+<!-- <input type="submit" value="Create
             Account" class="btn btn-block " [disabled]="!userregistrationForm.valid">
 
            <label> <a routerLink="" class="color"> Already have an account than Login!  </a></label>
 
         </form>
     </div>
+</div> -->
+
+
+<link
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    rel="stylesheet" id="bootstrap-css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet"
+    id="bootstrap-css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
+<div class="main">
+
+    <!-- Sign up form -->
+    <section class="signup">
+        <div class="container">
+            <div class="signup-content">
+                <div class="signup-form">
+                    <form [formGroup]='userregistrationForm' class="register-form" id="register-form"
+                        *ngIf="!isSuccessful" #f="ngForm" (ngSubmit)="f.form.valid && signup(userregistrationForm)">
+                        <h2 class="form-title">Sign up</h2>
+                        <div class="form-group">
+                            <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            <input type="text" name="username" id="username" formControlName="username"
+                                placeholder="Your Name" />
+                            <!-- <span
+                                *ngIf="!userregistrationForm.get('username').valid && userregistrationForm.get('username').touched"
+                                class="help-block">
+                                please enter valid username
+                            </span> -->
+                            <div class="alert-danger">
+                                <div
+                                    *ngIf=" userregistrationForm.get('username').touched">
+                                    please enter username
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email"><i class="zmdi zmdi-email"></i></label>
+                            <input type="email" name="email" id="email" formControlName="email"
+                                placeholder="Your Email" />
+                            <div class="alert-danger">
+                                <div
+                                    *ngIf=" userregistrationForm.get('email').invalid && userregistrationForm.get('email').touched">
+                                    please enter email </div>
+                                <div
+                                    *ngIf="userregistrationForm.get('email').invalid && userregistrationForm.get('email').errors.email">
+                                    email must be valid
+                                </div>
+                            </div>
+                       
+                        </div>
+                        <!-- <div class="form-group">
+                            <label for="phonenumber"><i class="zmdi zmdi-phone"></i></label>
+                            <input type="number" name="phonenumber" id="phonenumber" formControlName="phonenumber"
+                                placeholder="Your Phone Number" />
+                            <span
+                                *ngIf="!userregistrationForm.get('username').valid && userregistrationForm.get('username').touched"
+                                class="help-block">
+                                please enter valid phonenumber
+                            </span>
+                        </div> -->
+
+                        <div class="form-group">
+                            <label for="pass"><i class="zmdi zmdi-lock-outline"></i></label>
+                            <input type="password" name="pass" id="pass" formControlName="password"
+                                placeholder="Your password" />
+                            <div class="alert-danger">
+                                <div
+                                    *ngIf=" userregistrationForm.get('password').invalid && userregistrationForm.get('password').touched">
+                                    please enter Password </div>
+                                <div
+                                    *ngIf="userregistrationForm.get('password').invalid && userregistrationForm.get('password').errors.minlength">
+                                    Password must be at least 6 characters
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
+                            <label for="agree-term" class="label-agree-term" ><span><span></span></span>I agree all
+                                statements in </label>
+                        </div>
+
+                        <div class="form-group form-button">
+                            <input type="submit" name="signup" id="signup" class="form-submit" value="Register"
+                                [disabled]="!userregistrationForm.valid" />
+                        </div>
+
+                        <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+                            Signup failed!<br />{{ errorMessage }}
+                        </div>
+                    </form>
+                </div>
+                <div class="signup-image">
+                    <figure><img src="assets/images/background/signup-image.jpg" alt="sing up image"></figure>
+                    <h2><a routerLink="/login" class="signup-image-link">Already have an account than Login!</a></h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </div>
-
-
-
-
-
-
-
-
-
