--- a/src/app/User/user-list/user-list.component.html
+++ b/src/app/User/user-list/user-list.component.html
@@ -8,6 +8,7 @@
             <th scope="col">PASSWORD</th>
             <th scope="col">NAME</th>
             <th scope="col">EMAIL</th>
+            <th scope="col">ACTIVE</th>
             <th scope="col">Delete</th>
             <th scope="col">Update</th>
           </tr>
@@ -18,6 +19,7 @@
             <td>{{ user.password }}</td>
             <td>{{ user.username }}</td>
             <td><a href="mailto:{{ user.email }}">{{ user.email }}</a></td>
+            <td><button class="btn btn-danger" (click)="changeStatus(user.id)">{{ user.active }}</button></td>
             <td><button class="btn btn-danger" (click)="deleteUser(user.id)"><i class="fa fa-trash"></i>  / <i class="fa fa-user-times"></i></button></td>
             <td><button class="btn btn-success" (click)="updateUser(user.id)"><i class="fa fa-user-plus"></i></button></td>
           </tr>
