--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,160 @@
-@import
-"https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css";
+@import url('https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css');
 
+/* @import
+"https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"; */
+.dropdown.show .dropdown-menu {
+  opacity: 1 !important;
+}
 
-  .my{
-      background:  #2B7A78;
-      color: black;
-  }
+.my {
+  background: #2B7A78;
+  color     : black;
+}
+
+.navbar {
+  margin: 0%;
+}
+
+.nav>li>a:focus,
+.nav>li>a:hover {
+  background-color: transparent;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+.menu {
+  display: flex;
+}
+
+ul li {
+  position  : relative;
+  list-style: none;
+  margin    : 0 10px;
+}
+
+ul li a {
+  position       : relative;
+  height         : 40px;
+  display        : block;
+  text-decoration: none;
+  font-weight    : 600;
+  overflow       : hidden;
+  text-transform : uppercase;
+}
+
+ul li a span {
+  font-size : 100%;
+  width     : 100%;
+  height    : 100%;
+  display   : block;
+  transition: 0.5s;
+  color     : #f47629;
+}
+
+ul li a span:nth-child(1) {
+  color: #fff;
+}
+
+ul li a span:nth-child(2) {
+  color: #f47629;
+}
+
+ul li:hover a span:nth-child(1) {
+  transform: translateY(-100%);
+}
+
+ul li:hover a span:nth-child(2) {
+  transform: translateY(-100%);
+}
+
+.font1 {
+  color      : white;
+  font-family: 'Roboto', sans-serif;
+}
+
+.font1:hover {
+  color: #f47629;
+}
+
+.font1::after {
+  content   : '';
+  display   : block;
+  width     : 0;
+  height    : 2px;
+  background: white;
+  transition: width .3s;
+}
+
+.font1:hover::after {
+  width: 100%;
+}
+
+.navbar-nav .dropdown .dropdown-menu {
+  border            : 0;
+  border-radius     : 0;
+  padding           : 0;
+  bottom            : auto !important;
+  -webkit-box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow   : 0px 0px 40px 0px rgba(0, 0, 0, 0.2);
+  box-shadow        : 0px 0px 40px 0px rgba(0, 0, 0, 0.2);
+}
+
+.navbar-nav .dropdown .dropdown-menu li.open>a {
+  background-color: transparent;
+}
+
+.navbar-nav .dropdown .dropdown-menu li>a {
+  font-size         : 16px;
+  line-height       : 30px;
+  padding           : 10px 55px 10px 35px;
+  text-transform    : uppercase;
+  color             : #252936;
+  border-bottom     : 1px solid #f0f0f0;
+  -webkit-transition: all 200ms ease;
+  -moz-transition   : all 200ms ease;
+  -ms-transition    : all 200ms ease;
+  -o-transition     : all 200ms ease;
+}
+
+.navbar-nav .dropdown .dropdown-menu li>a:hover,
+.navbar-nav .dropdown .dropdown-menu li>a:focus {
+  background-color: transparent;
+  color           : #2B7A78;
+  border-bottom   : 1px solid #f0f0f0;
+}
+
+.navbar-nav .dropdown .dropdown-menu li:last-child>a {
+  border-bottom: 0;
+}
+
+.navbar-nav .dropdown .dropdown-menu .dropdown-menu {
+  top: 6px;
+}
+
+.navbar-nav .dropdown .dropdown-menu .ecaret {
+  width             : 0;
+  height            : 0;
+  margin-left       : 2px;
+  vertical-align    : middle;
+  display           : inline-block;
+  border            : 0;
+  float             : right;
+  margin-top        : 0;
+  margin-right      : -10px;
+  position          : relative;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition   : all 0.2s ease;
+  -ms-transition    : all 0.2s ease;
+  -o-transition     : all 0.2s ease;
+}
+
+.navbar-nav .dropdown .dropdown-menu .ecaret:before {
+  font-family: 'Electrician';
+  content    : "\e90e";
+}
+
+.navbar-nav .dropdown .dropdown-menu li>a:hover .ecaret {
+  margin-right: -20px;
+}
