--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,16 +6,84 @@
         </div>
 
         <ul class="navbar-nav ">
-            <li><a routerLink="/home" class="nav-link">Home</a></li>
-            <li><a routerLink="" class="nav-link">About us</a></li>
-            <li><a routerLink="" class="nav-link">Contact Us</a></li>
+            <li routerLinkActive="active"><a routerLink="/home" class="nav-link">Home</a></li>
+            <li routerLinkActive="active"><a routerLink="" class="nav-link">About us</a></li>
+            <li routerLinkActive="active"><a routerLink="" class="nav-link">Contact Us</a></li>
         </ul>
+
         <ul class="navbar-nav navbar-collapse justify-content-end">
-            <li><a routerLink="/login" class="nav-link">Login</a></li>
-            <li><a routerLink="/logout" class="nav-link">Logout</a></li>
+            <!-- <li routerLinkActive="active"><a routerLink="/signup" class="nav-link" >signup</a></li> -->
+            <!-- <li routerLinkActive="active"><a routerLink="/login" class="nav-link" *ngIf="!this.userHttpService.isUserLoggedIn()">Login</a></li> -->
+            <li class="nav-item dropdown  font1">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false" ><i class="fa fa-dashboard" aria-hidden="true"></i>
+                   Dashboard
+                </a>
+                <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item nav-link font1" routerLink="">My Order List</a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="">Approved Order  </a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="">Rejected Order</a></li>
+                    <li><a class="dropdown-item nav-link font1"  routerLink="">Logout</a></li>
+                </ul>
+            </li>
+
+        </ul>
+
+        <!-- <ul class="navbar-nav navbar-collapse justify-content-end">
+            <li class="nav-item dropdown  font1">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false" ><i class="fa fa-dashboard" aria-hidden="true"></i>
+                  Admin's Dashboard
+                </a>
+                <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item nav-link font1" routerLink="">Active User</a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="">Inactive User  </a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="">Total Orders</a></li>
+                    <li><a class="dropdown-item nav-link font1"  routerLink="">Chart </a></li>
+                </ul>
+            </li>
+
+        </ul> -->
+
+        <ul class="navbar-nav navbar-collapse justify-content-end">
+            <li routerLinkActive="active"><a routerLink="/signup" class="nav-link" >signup</a></li>
+            <li routerLinkActive="active"><a routerLink="/login" class="nav-link" >Login</a></li>
+            <li class="nav-item dropdown  font1">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false" ><i class="fa fa-user" aria-hidden="true"></i>
+                    My Profile
+                </a>
+                <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item nav-link font1" routerLink="/userprofile">My Profile</a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="/adminprofile">Admin Profile  </a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="MyOrders">My Order</a></li>
+                    <li><a class="dropdown-item nav-link font1"  routerLink="logout">Logout</a></li>
+                </ul>
+            </li>
+
         </ul>
     </nav>
-    <!-- <nav class="navbar navbar-default">
+
+</header>
+
+<!-- <li class="nav-item dropdown">
+            <button class="btn btn-secondary dropdown-toggle open" type="button" data-toggle="dropdown" aria-haspopup="true" id="dropdown-id"
+                aria-expanded="false">Menu</button>
+            <div class="dropdown-menu" aria-labelledby="dropdown-id">
+                <a class="dropdown-item" [routerLink]='["/"]'>Main page</a>
+                <a class="dropdown-item" [routerLink]='["/about"]'>About</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" [routerLink]='["/about/terms"]'>Terms</a>
+                <a class="dropdown-item" [routerLink]='["/about/privacy"]'>Privacy</a>
+            </div>
+        </li> -->
+<!-- <li routerLinkActive="active"><a routerLink="/logout" class="nav-link">Logout</a></li> -->
+
+
+
+
+<!-- *ngIf="this.loginService.isUserLoggedIn()" -->
+<!-- <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">WebSiteName</a>
@@ -28,4 +96,3 @@
           </ul>
         </div>
       </nav> -->
-</header>
