--- a/src/app/product/product-list/product-list.component.css
+++ b/src/app/product/product-list/product-list.component.css
@@ -1,26 +1,27 @@
-.myCss{
-    
-    margin: 20px;
+.myCss {
+
+    margin       : 20px;
     align-content: center;
-    padding: 10px;
-    text-align: center;
-    display: block;
+    padding      : 10px;
+    text-align   : center;
+    display      : block;
 }
 
-.my1{
+.my1 {
     align-content: center;
-    margin: 10px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin       : 10px;
+    margin-left  : 10%;
+    margin-right : 10%;
+    width        : 100%;
 }
 
-.my2{
-    margin: 20px;
+.my2 {
+    margin       : 20px;
     align-content: center;
-    padding: 10px;
-    text-align: center;
-    display: block;
-    font-size: 16px;
-  line-height: 23px;
-  font-weight: 400;
+    padding      : 10px;
+    text-align   : center;
+    display      : block;
+    font-size    : 16px;
+    line-height  : 23px;
+    font-weight  : 400;
 }
