--- a/src/app/User/user-list/user-list.component.html
+++ b/src/app/User/user-list/user-list.component.html
@@ -1,29 +1,71 @@
-<p>user-list works!</p>
-<div class="card my-5">
-    <div class="card-body">
-      <table class="table table-bordered table-striped">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">PASSWORD</th>
-            <th scope="col">NAME</th>
-            <th scope="col">EMAIL</th>
-            <th scope="col">ACTIVE</th>
-            <th scope="col">Delete</th>
-            <th scope="col">Update</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let user of users">
-            <td>{{ user.id }}</td>
-            <td>{{ user.password }}</td>
-            <td>{{ user.username }}</td>
-            <td><a href="mailto:{{ user.email }}">{{ user.email }}</a></td>
-            <td><button class="btn btn-danger" (click)="changeStatus(user.id)">{{ user.active }}</button></td>
-            <td><button class="btn btn-danger" (click)="deleteUser(user.id)"><i class="fa fa-trash"></i>  / <i class="fa fa-user-times"></i></button></td>
-            <td><button class="btn btn-success" (click)="updateUser(user.id)"><i class="fa fa-user-plus"></i></button></td>
-          </tr>
-        </tbody>
-      </table>
+<br>
+<br>
+<br>
+
+<form class="container" [formGroup]="userlist" (ngSubmit)="onSubmit()">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="col-md-9" style="height: max-content;">
+        <select formControlName="list" class="form-control" aria-selected="true"  aria-placeholder="All">
+          <option>All</option>
+          <option>active</option>
+          <option>inactive</option>
+        </select>
+      </div>
     </div>
+    <div class="col-md-3">
+      <div class="pull-left">
+
+        <button type="submit" class="btn btn-success">User List</button>
+      </div>
+    </div>
+
   </div>
+
+  <!-- <p *ngIf="!adminData.valid && adminData.touched && submitted ">Admin data is Invalid</p> -->
+</form>
+<div class="card my-5">
+  <div class="card-body">
+    <table class="table table-bordered table-striped">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">PASSWORD</th>
+          <th scope="col">NAME</th>
+          <th scope="col">EMAIL</th>
+          <th scope="col">ACTIVE</th>
+          <th scope="col">Delete</th>
+          <th scope="col">Update</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of users">
+          <td>{{ user.id }}</td>
+          <td>{{ user.password }}</td>
+          <td>{{ user.username }}</td>
+          <td><a href="mailto:{{ user.email }}">{{ user.email }}</a></td>
+          <td><button class="btn btn-danger"  (click)="changeStatus(user.id,user.active)">{{ user.active }}</button></td>
+          <td><button class="btn btn-danger" (click)="deleteUser(user.id)"><i class="fa fa-trash"></i> / <i
+                class="fa fa-user-times"></i></button></td>
+          <td><button class="btn btn-success" (click)="updateUser(user.id)"><i class="fa fa-user-plus"></i></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<!-- <router-outlet></router-outlet> -->
+
+<!-- <button type="button" class="btn btn-primary" (click)="(template)">Create template modal</button> -->
+<!--  
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Modal</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    This is a modal.
+  </div>
+</ng-template> -->
