--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,28 +29,29 @@
 
         </ul>
 
-        <!-- <ul class="navbar-nav navbar-collapse justify-content-end">
+        <ul class="navbar-nav navbar-collapse justify-content-end">
             <li class="nav-item dropdown  font1">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false" ><i class="fa fa-dashboard" aria-hidden="true"></i>
+                    aria-haspopup="true" aria-expanded="false" ><i class="fa fa-dashboard " aria-hidden="true"></i>
                   Admin's Dashboard
                 </a>
                 <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item nav-link font1" routerLink="">Active User</a></li>
-                    <li><a class="dropdown-item nav-link font1" routerLink="">Inactive User  </a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="userlist"  >Total user</a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="userlist"  >Active User</a></li>
+                    <li><a class="dropdown-item nav-link font1" routerLink="userlist/inactive">Inactive User</a></li>
                     <li><a class="dropdown-item nav-link font1" routerLink="">Total Orders</a></li>
                     <li><a class="dropdown-item nav-link font1"  routerLink="">Chart </a></li>
                 </ul>
             </li>
 
-        </ul> -->
+        </ul>
 
         <ul class="navbar-nav navbar-collapse justify-content-end">
-            <li routerLinkActive="active"><a routerLink="/signup" class="nav-link" >signup</a></li>
-            <li routerLinkActive="active"><a routerLink="/login" class="nav-link" >Login</a></li>
+            <li routerLinkActive="active"><a routerLink="/signup" class="nav-link" *ngIf="!isLoggedIn" >signup</a></li>
+            <li routerLinkActive="active"><a routerLink="/login" class="nav-link" *ngIf="!isLoggedIn" >Login</a></li>
             <li class="nav-item dropdown  font1">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false" ><i class="fa fa-user" aria-hidden="true"></i>
+                    aria-haspopup="true" aria-expanded="false" ><i class="fa fa-user" aria-hidden="true" *ngIf="isLoggedIn"></i>
                     My Profile
                 </a>
                 <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
