changes in project

--- a/src/app/Forms/User/logout/logout.component.html
+++ b/src/app/Forms/User/logout/logout.component.html
@@ -3,11 +3,9 @@
     <p class="lead">You are successfully <strong>Logout</strong>
     </p>
     <hr>
-    <p>
-        Having trouble? <a routerLink="/contactUs">Contact us</a>
-    </p>
+    
     <p class="lead">
-        <a class="btn btn-primary btn-sm" routerLink="/login" role="button">Continue to homepage</a>
+        <a class="btn btn-primary btn-sm" routerLink="/login" role="button">Log in again</a>
     </p>
 </div>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
