--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,4 @@
-<!-- <footer class="myFooter">
-
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> FloorDecor.com</a>
-    </div>
-  
-  </footer> -->
-
-
-  
-<!-- Footer -->
+<!-- 
 	<section id="footer">
 		<div class="container">
 			
@@ -40,5 +30,4 @@
 				<hr>
 			</div>	
 		</div>
-	</section>
-	<!-- ./Footer -->
+	</section> -->
