--- a/src/app/User/user-list/user-list.component.html
+++ b/src/app/User/user-list/user-list.component.html
@@ -30,24 +30,29 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col">ID</th>
-          <th scope="col">PASSWORD</th>
+          <!-- <th scope="col">PASSWORD</th> -->
           <th scope="col">NAME</th>
           <th scope="col">EMAIL</th>
           <th scope="col">ACTIVE</th>
-          <th scope="col">Delete</th>
-          <th scope="col">Update</th>
+          <th scope="col">DELETE</th>
+          <th scope="col">EDIT</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let user of users">
           <td>{{ user.id }}</td>
-          <td>{{ user.password }}</td>
+          <!-- <td>{{ user.password }}</td> -->
           <td>{{ user.username }}</td>
           <td><a href="mailto:{{ user.email }}">{{ user.email }}</a></td>
-          <td><button class="btn btn-danger"  (click)="changeStatus(user.id,user.active)">{{ user.active }}</button></td>
+
+          <td>
+            <button class="btn btn-danger" *ngIf=" user.active "  (click)="changeStatus(user.id,user.active)">active</button>
+            <button class="btn btn-danger" *ngIf=" !user.active " (click)="changeStatus(user.id,user.active)">inactive</button>
+          </td>
+          
           <td><button class="btn btn-danger" (click)="deleteUser(user.id)"><i class="fa fa-trash"></i> / <i
                 class="fa fa-user-times"></i></button></td>
-          <td><button class="btn btn-success" (click)="updateUser(user.id)"><i class="fa fa-user-plus"></i></button>
+          <td><button class="btn btn-success" (click)="updateUser(user.id)"><i class="fa fa-pencil"></i></button>
           </td>
         </tr>
       </tbody>
