--- a/src/app/User/user-profile/edit-profile/edit-profile.component.html
+++ b/src/app/User/user-profile/edit-profile/edit-profile.component.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="signup-content">
                 <div class="signup-form">
-                    <h2 class="form-title">Sign up</h2>
+                    <h2 class="form-title">Edit Profile</h2>
                     <div class="form-group">
                         <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                         <input type="text" name="name" id="name" [(ngModel)]="user.username"
@@ -31,7 +31,7 @@
                             [(ngModel)]="user.phonenumber" placeholder="Your Phone Number" />
                     </div> -->
                      <div class="form-group">
-                        <label for="password"><i class="zmdi zmdi-card"></i></label>
+                        <label for="password"><i class="zmdi zmdi-lock"></i></label>
                         <input type="text" name="password" id="password"
                             [(ngModel)]="user.password" placeholder="Your Password" />
                     </div>
