--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,81 @@
 <p>admin-dashboard works!</p>
 <div class="container">
-    <header class="jumbotron">
-      <p>{{ content }}</p>
-    </header>
-  </div>
+  <header class="jumbotron">
+    <p>{{ content }}</p>
+  </header>
+</div>
+
+
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div id="wrapper" class="active">
+      
+      <!-- Sidebar -->
+            <!-- Sidebar -->
+      <div id="sidebar-wrapper">
+      <ul id="sidebar_menu" class="sidebar-nav">
+           <li class="sidebar-brand"><a id="menu-toggle" href="#">Menu<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
+      </ul>
+        <ul class="sidebar-nav" id="sidebar">     
+          <li><a (click)="totalOrder()" >Link1</a></li>
+          <li><a (click)="approvedOrder()" >link2<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+          <li><a (click)="rejectedOrder()" >link3<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+        </ul>
+      </div>
+          
+      <!-- Page content -->
+      <div id="page-content-wrapper">
+        <!-- Keep all page content within the page-content inset div! -->
+        <div class="page-content inset">
+          <div class="row">
+              <div class="col-md-12">
+                <div class="container">
+                    <div *ngFor="let user of orderDetail">
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="row sample-row">
+                                    <div class="col-xs-12 col-sm-6 col-md-3 gutter-margin-xs-sm gutter-margin-sm-md">
+                                        <div class="inner"><b>Order Id:</b> {{user.id}}</div>
+                                    </div>
+                
+                                    <div class="col-xs-12 col-sm-6 col-md-3 gutter-margin-xs-sm gutter-margin-sm-md">
+                                        <div class="inner">product Name: <b>{{user.productName}}</b></div>
+                                    </div>
+                
+                                    <div class="col-xs-12 col-sm-6 col-md-3 gutter-margin-xs-sm gutter-margin-sm-md">
+                                        <div class="inner">Total: <b><i class="fa fa-inr" aria-hidden="true"></i> {{user.total}} </b>
+                                        </div>
+                                    </div>
+                
+                                </div>
+                
+                            </div>
+                            <div class="row sample-row">
+                                <div class="col-xs-12 col-sm-6 col-md-6 gutter-margin-xs-sm gutter-margin-sm-md">
+                                    <div class="col-12">Name: <b>{{user.name}}</b></div>
+                                    <div class="col-12">Address: <b>{{user.address}}</b></div>
+                                    <div class="col-12">Landmark: <b>{{user.landmark}}</b></div>
+                                    <div class="col-12">City: <b>{{user.city}}</b></div>
+                                </div>
+                
+                                <div class="col-xs-12 col-sm-6 col-md-6 gutter-margin-xs-sm gutter-margin-sm-md">
+                                    <div class="col-12" *ngIf="user.approvedOrder">Status :
+                                        <b>order approved</b></div>
+                                    <div class="col-12" *ngIf="user.rejectedOrder">Status :
+                                        <b>order approved by Admin</b></div>
+                                        <button class="btn btn-warning">{{user.activeStatus}}</button>
+                
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
