--- a/src/app/product/product-list/product-item/product-item.component.html
+++ b/src/app/product/product-list/product-item/product-item.component.html
@@ -4,8 +4,9 @@
     <div class="card-body">
         <h4 class="card-title">{{product.id}}</h4>
         <p class="card-text">{{product.name}}</p>
-        <p class="card-text">{{product.detail}}</p>
+        <p class="card-text">{{product.productDetail}}</p>
         <p class="card-text">{{product.prize}}</p>
         <!-- <button class="btn btn-primary" (click)="getDetail()"> Buy </button> -->
+
     </div>
 </a>
